index copy changes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <img src="http://chiaracodes.com/portfolio_shot.jpeg" alt="Chiara Zielinsky" width="280" height="280">
         </div>
         <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet about-contentWrap">
-          <h5>I'm a developer &amp; bike lover from Toronto. I spend most of my time coding new, accessible projects that use the most browser compatabile functionality. I'm looking to work for a company that delivers outstanding products to either their software or clients.</h5>
+          <h5>I'm a developer &amp; bike lover from Toronto. I spend most of my time coding <em>accessible</em>, <em>responsive</em> and <em>interactive</em> projects that are cross-browser and platform tested. I'm looking to work for a company that delivers outstanding products to clients or their own software, in an agile environment.</h5>
         </div>
         <div class="mdc-layout-grid__cell--span-2"></div>
       </div>
@@ -99,7 +99,7 @@
             </svg>
           </div>
           <h3>Learner</h3>
-          <p>Since graduating U of T in 2011, I have taken numerous courses in web development including Intro/Advanced Development, Wordpress, and Javascript. Not to mention weekly code alongs..</p>
+          <p>Since graduating U of T in 2011, I have taken numerous courses at <a href="http://hackeryou.com">Hacker You</a>, including Intro/Advanced Development, Wordpress, and Javascript. Not to mention the Immersive Bootcamp. </p>
         </div>
       </div>
 
@@ -116,7 +116,7 @@
             </svg>
           </div>
           <h3>Front-End Developer</h3>
-          <p>I create responsive, fast websites from scratch using HTML, CSS and Javascript. </p>
+          <p>Putting my skills to work at a Toronto digital agency for a year, where I was creating responsive websites, landing pages, and e-mails using HTML, CSS, Javascript, PHP. </p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
@@ -136,7 +136,7 @@
             </svg>
           </div>
           <h3>Mentor</h3>
-          <p>I spend a handful of days in the classroom, volunteering for <a href="canadalearningcode.com">Canada Learning Code</a>, helping students think about the ways in which we can debug and create dry, consistent, organized code.</p>
+          <p> I volunteer at least once a month at <a href="canadalearningcode.com">Canada Learning Code</a>, helping students think about the ways in which we can debug while dry, consistent, organized code.</p>
         </div>
       </div>
 
@@ -153,7 +153,7 @@
             </svg>
           </div>
           <h3>Freelance Experience</h3>
-          <p> I turn ideas into interactive digital experiences through a <a class="text-link" target="_blank" href="https://blog.nicolesaidy.com/5-steps-for-a-successful-website-design-90290066f326">design process</a> that consists of Planning, Wireframing, Prototyping &amp; Testing.</p>
+          <p> I turn client needs into digital products through (sometimes designing), planning, coding and testing. </p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
@@ -166,7 +166,7 @@
     <div class="mdc-layout-grid max-width">
       <div class="mdc-layout-grid__cell--span-2"></div>
       <div class="mdc-layout-grid__cell--span-8">
-        <h2>Latest work</h2>
+        <h2>Portfolio</h2>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
     </div>
@@ -185,7 +185,7 @@
                   <div class="card-tag text-sm">HTML/SCSS</div>
               </div>
               <h4>iHurt</h4>
-              <p>A dynamic wellness module that generates stre</p>
+              <p>A responsive, dynamic wellness module that generates simple stretches based on user input and onClick. Using the agile technique of paired programming, I was able to strengthen both my logic and design skills from this particular project.</p>
             </div>
           </a>
         </div>
@@ -197,12 +197,12 @@
             <div class="card-img" style='background-image: url("images/kwiki.jpg");'></div>
             <div class="card-content">
               <div class="card-tags">
-                <div class="card-tag text-sm">Google API</div>
+                <div class="card-tag text-sm">API</div>
                 <div class="card-tag text-sm">Javascript</div>
                 <div class="card-tag text-sm">HTML/SCSS</div>
               </div>
               <h4>Bike&Bean</h4>
-              <p>Designed logo, brand identity and mobile app for Kwiki, a food and service ordering app for resorts & hotels.</p>
+              <p>Without leaving the page, a user inputs a desired location and current location and data is dynamically pulled in to direct them to the nearest bike rental & coffee shop. </p>
             </div>
           </div>
         </a>
@@ -219,11 +219,11 @@
             <div class="card-img"  style='background-image: url("images/laravel.jpg");'></div>
             <div class="card-content">
               <div class="card-tags">
-                <div class="card-tag text-sm">UI/UX</div>
-                <div class="card-tag text-sm">Branding</div>
+                <div class="card-tag text-sm">Responsive Design</div>
+                <div class="card-tag text-sm">HTML/SCSS</div>
               </div>
-              <h4>Laravel Angular</h4>
-              <p>An open source project for building consistent APIs. I designed the logo, brand identity, website and documentation.</p>
+              <h4>Flowie</h4>
+              <p>A fully responsive, flexible, multi-page website converted from a PSD specs for a flower shop.</p>
             </div>
           </a>
         </div>
@@ -238,8 +238,8 @@
                 <div class="card-tag text-sm">UI/UX</div>
                 <div class="card-tag text-sm">HTML/CSS</div>
               </div>
-              <h4>PWA Workshop</h4>
-              <p>A workshop about PWAs that I present in conferences and companies. Designed logo, brand identity and one page website.</p>
+              <h4>BloomOn</h4>
+              <p>Coded for an agency in Amsterdam, I coded this monthly newsletter using responsive XHTML and inline styling, ensuring that each e-mail platform renders responsively, using Litmus as a QA tool. </p>
             </div>
           </div>
         </a>
