--- a/html2.html
+++ b/html2.html
@@ -13,11 +13,11 @@
 
 	<link href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" rel=
 	"stylesheet">
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.x.x/js/swiper.esm.bundle.js"></script>
 	<link href="public/styles/style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js">
-	
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.x.x/css/swiper.css">
 
 		  <meta name="description" content="I'm a web developer and digital nerd from Toronto. I'm passionate about tech, collaboration and shaping how people view code through my activities as a mentor." />
 
