images, copy changes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="mdc-layout-grid__cell--span-2"></div>
       <div class="mdc-layout-grid__cell--span-8">
         <div class="navbar-grid">
-          <!-- <img class="logo" src="http://chiaracodes.com/decor_pastels.png" alt="Logo"> -->
+          <span class="logo">CZ</span>
           <div class="menu">
             <a href="#" target="_blank" id="link-blog" class="navbar-link">Portfolio</a>
             <a href="# target="_blank" id="link-course-nav" class="navbar-link">Blog</a>
@@ -57,6 +57,7 @@
     <div class="mdc-layout-grid__cell--span-8 mdc-layout-grid__cell--align-middle">
       <div class="cover">
         <h1>Hi! I’m Chiara. Developer, mentor &amp; nerd.</h1>
+
       </div>
     </div>
     <div class="mdc-layout-grid__cell--span-2"></div>
@@ -71,14 +72,16 @@
           <img src="http://chiaracodes.com/portfolio_shot.jpeg" alt="Chiara Zielinsky" width="280" height="280">
         </div>
         <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet about-contentWrap">
-          <h5>I'm a developer &amp; bike lover from Toronto. I spend most of my time coding <em>accessible</em>, <em>responsive</em> and <em>interactive</em> projects that are cross-browser and platform tested. I'm looking to work for a company that delivers outstanding products to clients or their own software, in an agile environment.</h5>
+          <h5>I eat, breathe and live all things front end. I adapt quickly to shifting siutations, collaborating to create high quality and modular code.  I spend most of my time coding <em>accessible</em>, <em>responsive</em> and <em>interactive</em> projects that are cross-browser and platform tested. I have 1+ years of work experience, mastery of HTML, CSS, and Javascript, and profound experience with Git.  I'm looking to work for a company that delivers outstanding products to clients or their own software, in an agile environment.</h5>
+
+          <a href="mailto:hi@chiaracodes.com">Let's Connect</a>
         </div>
         <div class="mdc-layout-grid__cell--span-2"></div>
       </div>
     </div>
   </div>
 
-  <div class="skills-wrapper" id="about">
+  <!-- <div class="skills-wrapper" id="about">
     <div class="mdc-layout-grid max-width">
       <div class="mdc-layout-grid__cell--span-2"></div>
       <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
@@ -99,7 +102,7 @@
             </svg>
           </div>
           <h3>Learner</h3>
-          <p>Since graduating U of T in 2011, I have taken numerous courses at <a href="http://hackeryou.com">Hacker You</a>, including Intro/Advanced Development, Wordpress, and Javascript. Not to mention the Immersive Bootcamp. </p>
+          <p>Since graduating U of T in 2011, I have taken numerous courses at <a href="http://hackeryou.com">Hacker You</a>, including Intro/Advanced Development, Wordpress, and Javascript. Not to mention the Immersive Bootcamp, which changed my life in immeasurable ways. </p>
         </div>
       </div>
 
@@ -158,7 +161,7 @@
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
     </div>
-  </div>
+  </div> -->
 
 
   <div id="work" class="work-wrapper">
@@ -177,7 +180,7 @@
       <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <div class="card">
           <a href="https://www.behance.net/gallery/63715997/Webdash-Branding-Website-App#comments" target="_blank">
-            <div class="card-img" style='background-image: url("images/webdash.jpg");'></div>
+            <div class="card-img" style='background-image: url("images/placeit1.png");'></div>
             <div class="card-content">
               <div class="card-tags">
                 <div class="card-tag text-sm">j.Query</div>
@@ -185,7 +188,7 @@
                   <div class="card-tag text-sm">HTML/SCSS</div>
               </div>
               <h4>iHurt</h4>
-              <p>A responsive, dynamic wellness module that generates simple stretches based on user input and onClick. Using the agile technique of paired programming, I was able to strengthen both my logic and design skills from this particular project.</p>
+              <p>A responsive, dynamic wellness module that generates accessible yoga stretches based on user input and onClick events. Using simplified selectors, DRY event handling, and prepropressed styling, this project was completed using the agile method of paired programming. </p>
             </div>
           </a>
         </div>
@@ -194,7 +197,7 @@
       <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <div class="card">
           <a href="https://www.behance.net/gallery/57780909/Kwiki-Delivery-App-Design?" target="_blank">
-            <div class="card-img" style='background-image: url("images/kwiki.jpg");'></div>
+            <div class="card-img" style='background-image: url("images/placeit2.png");'></div>
             <div class="card-content">
               <div class="card-tags">
                 <div class="card-tag text-sm">API</div>
