--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div class="navbar-grid">
           <span class="logo">CZ</span>
           <div class="menu">
-            <a href="#" target="_blank" id="link-blog" class="navbar-link">Portfolio</a>
-            <a href="# target="_blank" id="link-course-nav" class="navbar-link">Blog</a>
-            <a href="#" target="_blank" id="link-course-nav" class="navbar-link">Contact</a>
+            <a href="#"  id="link-blog" class="navbar-link">Portfolio</a>
+            <a href="#"id="link-course-nav" class="navbar-link">Blog</a>
+            <a href="#"  id="link-course-nav" class="navbar-link">Contact</a>
           </div>
         </div>
       </div>
@@ -281,9 +281,9 @@
           <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
             <div class="card">
               <a href="">
-                <div class="card-img" style='background-image: url("images/steps-designer.jpg");'></div>
+                <div class="card-img" style='background-image: url("images/typography_blog.png");'></div>
                 <div class="card-content">
-                  <h5>Accessibility: Fonts</h5>
+                  <h5><a href="goo.gl/jpKv4b">Accessibility: Fonts</a></h5>
                   <p>What is good accessability for fonts, and bad? Here are tips & resources to help you get started.</p>
                 </div>
               </a>
@@ -293,9 +293,9 @@
           <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
             <div class="card">
               <a href="">
-                <div class="card-img" style='background-image: url("images/freelancer.jpg");'></div>
+                <div class="card-img" style='background-image: url("images/life_hacks.png");'></div>
                 <div class="card-content">
-                  <h5>Apps to help you organize your life (desktop).</h5>
+                  <h5><a href="goo.gl/jpKv4b">Apps to help you organize your life (desktop).</a></h5>
                   <p>Life is too short to have a cluttered up desktop. Here are ways to minify your everyday experience.</p>
                 </div>
               </a>
